# cgiar-climate-change-synthesis

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
data/: 2023-10-16-IRRI-Climate-Change-fixed-filtered.csv  2023-10-16-irri-climate-change.tsv  2024-02-07-ClimateChange_2012-2023_IFPRI-JA-filtered.csv  2024-02-07-ClimateChange_2012-2023_IFPRI-JA.csv  cifor-filtered.csv  cimmyt-filtered.csv  climate_results_with_abstract.csv  dois-for-combined-dataset.csv  dois-thematic-analysis-adaptation.csv  dois-thematic-analysis-drought.csv  dois-thematic-analysis-rainfall.csv  dois-to-remove.csv  icrisat-filtered.csv  ifpri-filtered.csv  included-in-review.csv  melspace-filtered.csv  urls-to-remove.csv  worldfish-filtered.csv
src/: harvest_cgspace.py  harvest_cimmyt.py  harvest_dspace.py  harvest_ifpri.py  harvest_melspace.py  icrisat_json_to_csv.py  merge_source_csvs.py  update-sources.sh  util.py
